fix - click on overlay doesn't close the modal fix - when the modal is shown the background can't be scrolled (scroll locking) - adds the basic style build

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "main": "build/polylang-language-switcher.js",
     "files": [
         "build/*",
+        "inc/*",
         "polylang-language-switcher.php",
         "LICENSE.md",
         "readme.txt"
