--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "polylang-language-switcher",
-    "version": "0.0.1",
+    "version": "0.0.2",
     "author": "Erik",
     "license": "GPL-2.0-or-later",
     "main": "build/polylang-language-switcher.js",
@@ -18,21 +18,18 @@
         "lint:css": "wp-scripts lint-style",
         "lint:js": "wp-scripts lint-js",
         "packages-update": "wp-scripts packages-update",
-        "plugin-zip": "wp-scripts plugin-zip"
+        "plugin-zip": "wp-scripts plugin-zip",
+        "wp-env": "npm run wp-env start -- --update"
     },
     "devDependencies": {
-        "@babel/core": "^7.18.9",
-        "@wordpress/babel-preset-default": "^6.12.0",
-        "@wordpress/block-editor": "^9.4.0",
-        "@wordpress/blocks": "^11.12.0",
-        "@wordpress/browserslist-config": "^4.1.2",
-        "@wordpress/components": "^19.14.0",
-        "@wordpress/element": "^4.10.0",
-        "@wordpress/scripts": "^23.5.0"
-    },
-    "engines": {
-        "node": ">=14.0.0",
-        "npm": ">=6.9.0 <7"
+        "@babel/core": "^7.21.0",
+        "@wordpress/babel-preset-default": "^7.12.0",
+        "@wordpress/block-editor": "^11.5.0",
+        "@wordpress/blocks": "^12.5.0",
+        "@wordpress/browserslist-config": "^5.11.0",
+        "@wordpress/components": "^23.5.0",
+        "@wordpress/element": "^5.5.0",
+        "@wordpress/scripts": "^25.5.1"
     },
     "eslintConfig": {
         "extends": [
