--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
     "name": "polylang-language-switcher",
-    "version": "0.0.2",
+    "version": "0.0.3",
     "author": "Erik",
     "license": "GPL-2.0-or-later",
     "main": "build/polylang-language-switcher.js",
     "files": [
         "build/*",
         "inc/*",
+        "block.json",
         "polylang-language-switcher.php",
         "LICENSE.md",
         "readme.txt"
@@ -24,7 +25,6 @@
     "devDependencies": {
         "@babel/core": "^7.21.0",
         "@wordpress/babel-preset-default": "^7.12.0",
-        "@wordpress/block-editor": "^11.5.0",
         "@wordpress/blocks": "^12.5.0",
         "@wordpress/browserslist-config": "^5.11.0",
         "@wordpress/components": "^23.5.0",
