--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "@babel/core": "^7.21.0",
         "@wordpress/babel-preset-default": "^7.12.0",
         "@wordpress/blocks": "^12.5.0",
+        "@wordpress/block-editor": "^12.0.0",
         "@wordpress/browserslist-config": "^5.11.0",
         "@wordpress/components": "^23.5.0",
         "@wordpress/element": "^5.5.0",
