--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,9 @@ yarn-error.log*
 # Coverage directory used by tools like istanbul
 coverage
 
+# Build
+build/
+
 # Dependency directories
 node_modules/
 
