--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-    "name": "polylang-language-switcher",
+    "name": "vsge-language-switcher",
     "version": "0.1.4",
     "author": "Erik",
     "license": "GPL-2.0-or-later",
-    "main": "build/polylang-language-switcher.js",
+    "main": "build/vsge-language-switcher.js",
     "files": [
         "build/*",
         "inc/*",
@@ -25,12 +25,12 @@
     "devDependencies": {
         "@babel/core": "^7.21.0",
         "@wordpress/babel-preset-default": "^7.21.0",
-        "@wordpress/block-editor": "^12.5.0",
-        "@wordpress/blocks": "^12.14.0",
-        "@wordpress/browserslist-config": "^5.20.0",
-        "@wordpress/components": "^25.3.0",
-        "@wordpress/element": "^5.14.0",
-        "@wordpress/scripts": "^26.8.0"
+        "@wordpress/block-editor": "^12.13.0",
+        "@wordpress/blocks": "^12.22.0",
+        "@wordpress/browserslist-config": "^5.28.0",
+        "@wordpress/components": "^25.11.0",
+        "@wordpress/element": "^5.22.0",
+        "@wordpress/scripts": "^26.16.0"
     },
     "prettier": "@wordpress/prettier-config",
     "eslintConfig": {
@@ -40,5 +40,8 @@
     },
     "browserslist": [
         "extends @wordpress/browserslist-config"
-    ]
+    ],
+    "dependencies": {
+        "body-scroll-lock": "^4.0.0-beta.0"
+    }
 }
