--- a/package.json
+++ b/package.json
@@ -30,25 +30,39 @@
 		"js-cookie": "^3.0.5"
 	},
     "devDependencies": {
-        "@babel/core": "^7.24.0",
+        "@babel/core": "^7.24.6",
         "@types/body-scroll-lock": "^3.1.2",
-        "@types/wordpress__block-editor": "^11.5.11",
-        "@types/wordpress__blocks": "^12.5.13",
-        "@wordpress/babel-preset-default": "^7.36.0",
-        "@wordpress/block-editor": "^12.20.0",
-        "@wordpress/blocks": "^12.29.0",
-        "@wordpress/browserslist-config": "^5.35.0",
-        "@wordpress/components": "^27.0.0",
-        "@wordpress/element": "^5.29.0",
-        "@wordpress/scripts": "^27.3.0"
+        "@types/wordpress__block-editor": "^11.5.14",
+        "@types/wordpress__blocks": "^12.5.14",
+        "@wordpress/babel-preset-default": "^8.0.0",
+        "@wordpress/block-editor": "^13.0.0",
+        "@wordpress/blocks": "^13.0.0",
+        "@wordpress/browserslist-config": "^6.0.0",
+        "@wordpress/components": "^28.0.0",
+        "@wordpress/element": "^6.0.0",
+        "@wordpress/scripts": "^26.19.0"
     },
-    "prettier": "@wordpress/prettier-config",
-    "eslintConfig": {
-        "extends": [
-            "plugin:@wordpress/eslint-plugin/recommended"
-        ]
-    },
-    "browserslist": [
-        "extends @wordpress/browserslist-config"
-    ]
+
+	"browserslist": [
+		"extends @wordpress/browserslist-config"
+	],
+	"engines": {
+		"node": ">=14.0.0",
+		"npm": ">=6.9.0"
+	},
+	"eslintConfig": {
+		"extends": [
+			"plugin:@wordpress/eslint-plugin/recommended"
+		],
+		"env": {
+			"browser": true,
+			"node": true
+		},
+		"globals": {
+			"window": true,
+			"document": true,
+			"localStorage": true
+		}
+	},
+	"prettier": "@wordpress/prettier-config"
 }
