--- a/package.json
+++ b/package.json
@@ -1,68 +1,71 @@
 {
-    "name": "vsge-language-switcher",
-    "version": "0.2.0",
-    "author": "Erik",
-    "license": "GPL-2.0-or-later",
-    "main": "build/vsge-language-switcher.js",
-    "files": [
-        "build/*",
-        "inc/*",
-        "languages/*",
-        "block.json",
-        "polylang-language-switcher.php",
-        "LICENSE.md",
-        "readme.txt"
+  "name": "vsge-language-switcher",
+  "version": "0.2.0",
+  "author": "Erik",
+  "license": "GPL-2.0-or-later",
+  "main": "build/vsge-language-switcher.js",
+  "files": [
+    "build/*",
+    "inc/*",
+    "languages/*",
+    "block.json",
+    "polylang-language-switcher.php",
+    "LICENSE.md",
+    "readme.txt"
+  ],
+  "scripts": {
+    "start": "wp-scripts start",
+    "build": "npm run build:scripts && npm run build:makepot",
+    "build:scripts": "wp-scripts build",
+    "build:makepot": "npx @wp-blocks/make-pot",
+    "format": "wp-scripts format",
+    "lint:css": "wp-scripts lint-style",
+    "lint:js": "wp-scripts lint-js",
+    "packages-update": "wp-scripts packages-update",
+    "plugin-zip": "wp-scripts plugin-zip",
+    "wp-env": "npm run wp-env start -- --update"
+  },
+  "dependencies": {
+    "body-scroll-lock": "^4.0.0-beta.0",
+    "js-cookie": "^3.0.5"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.24.7",
+    "@types/body-scroll-lock": "^3.1.2",
+    "@types/js-cookie": "^3.0.6",
+    "@types/wordpress__block-editor": "^11.5.15",
+    "@types/wordpress__blocks": "^12.5.14",
+    "@wordpress/babel-preset-default": "^8.1.0",
+    "@wordpress/block-editor": "^13.1.0",
+    "@wordpress/blocks": "^13.1.0",
+    "@wordpress/browserslist-config": "^6.1.0",
+    "@wordpress/eslint-plugin": "^19.1.0",
+    "@wordpress/prettier-config": "^4.1.0",
+    "@wordpress/stylelint-config": "^22.1.0",
+    "@wordpress/components": "^28.1.0",
+    "@wordpress/element": "^6.1.0",
+    "@wordpress/scripts": "^27.9.0"
+  },
+  "browserslist": [
+    "extends @wordpress/browserslist-config"
+  ],
+  "engines": {
+    "node": ">=14.0.0",
+    "npm": ">=6.9.0"
+  },
+  "eslintConfig": {
+    "extends": [
+      "plugin:@wordpress/eslint-plugin/recommended"
     ],
-    "scripts": {
-		"start": "wp-scripts start",
-		"build": "npm run build:scripts && npm run build:makepot",
-		"build:scripts": "wp-scripts build",
-		"build:makepot": "npx @wp-blocks/make-pot",
-        "format": "wp-scripts format",
-        "lint:css": "wp-scripts lint-style",
-        "lint:js": "wp-scripts lint-js",
-        "packages-update": "wp-scripts packages-update",
-        "plugin-zip": "wp-scripts plugin-zip",
-        "wp-env": "npm run wp-env start -- --update"
+    "env": {
+      "browser": true,
+      "node": true
     },
-	"dependencies": {
-		"body-scroll-lock": "^4.0.0-beta.0",
-		"js-cookie": "^3.0.5"
-	},
-    "devDependencies": {
-        "@babel/core": "^7.24.6",
-        "@types/body-scroll-lock": "^3.1.2",
-        "@types/wordpress__block-editor": "^11.5.14",
-        "@types/wordpress__blocks": "^12.5.14",
-        "@wordpress/babel-preset-default": "^8.0.0",
-        "@wordpress/block-editor": "^13.0.0",
-        "@wordpress/blocks": "^13.0.0",
-        "@wordpress/browserslist-config": "^6.0.0",
-        "@wordpress/components": "^28.0.0",
-        "@wordpress/element": "^6.0.0",
-        "@wordpress/scripts": "^26.19.0"
-    },
-
-	"browserslist": [
-		"extends @wordpress/browserslist-config"
-	],
-	"engines": {
-		"node": ">=14.0.0",
-		"npm": ">=6.9.0"
-	},
-	"eslintConfig": {
-		"extends": [
-			"plugin:@wordpress/eslint-plugin/recommended"
-		],
-		"env": {
-			"browser": true,
-			"node": true
-		},
-		"globals": {
-			"window": true,
-			"document": true,
-			"localStorage": true
-		}
-	},
-	"prettier": "@wordpress/prettier-config"
+    "globals": {
+      "window": true,
+      "document": true,
+      "localStorage": true
+    }
+  },
+  "prettier": "@wordpress/prettier-config"
 }
